--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -12,11 +12,11 @@
 
 
     <div id = "container">
-        <section> 
+        <!--<section> 
             <div class="stars"></div> 
             <div class ="shimmer"></div>
             <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>   
-        </section> 
+        </section>-->
         
         <img id="snowBackground" src="/images/North-Pole/snowLandscape.png" alt = "snow landscape">
         <img id="sleigh" src ="/images/North-Pole/sleigh.png" alt="sleigh">
@@ -50,11 +50,66 @@
         <!--<img class= "cloud" id="cloud2" src="/images/Lego-Land/cloud1.png" alt="cloud">
         <img class= "cloud" id="cloud3" src="/images/Lego-Land/cloud1.png" alt="cloud">
         <img class= "cloud" id="cloud4" src="/images/Lego-Land/cloud1.png" alt="cloud">-->
-        <img id="flake1"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
-        <img id="flake2"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
-        <img id="flake3"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
-        <img id="flake4"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
-        <img id="flake5"class="snow" src="/images/legoSnowflake.png" alt="snowflake">
+        <img id="flake1"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake2"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake3"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake4"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake5"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake6"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake7"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake8"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake9"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake10"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake11"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake12"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake13"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake14"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake15"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake16"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake17"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake18"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake19"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake20"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">    
+        <img id="flake21"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake22"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake23"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake24"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake25"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake26"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake27"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake28"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake29"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake30"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake31"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake32"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake33"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake34"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake35"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake36"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake37"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake38"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake39"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake40"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake41"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake42"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake43"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake44"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake45"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake46"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake47"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake48"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake49"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake50"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake51"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake52"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake53"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake54"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake55"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake56"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake57"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake58"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake59"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+        <img id="flake60"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
     </div>
 </body>
 </html>
