--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -70,7 +70,7 @@
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
         </div>
 
-         <!-- Bottom windows -->
+        <!-- Bottom windows -->
         <div class="windowContainerBottom">
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
@@ -122,9 +122,9 @@
         </div>
 
         <!-- Presents -->
-        <div class="presentShowBtn"></div>
+        <div class="presentShowBtn">
 
-        <div class="presentContainer">
+        
             <img class="present" id="present1" src="/images/North-Pole/present1.png" alt="present1"/>
             <img class="present" id="present2" src="/images/North-Pole/present2.png" alt="present1"/>
             <img class="present" id="present3" src="/images/North-Pole/present3.png" alt="present1"/>
