--- a/html/Globe.html
+++ b/html/Globe.html
@@ -35,7 +35,7 @@
 
         <img id="always-has-been-gun" src="/IMAGES/Globe/alwaysHasBeen_gun.png" alt="Always has been"/>
         <img id="always-has-been-victim" src="/IMAGES/Globe/alwaysHasBeen_victim.PNG" alt="Always has been"/>
-    
+        <img id="talkingbubble-1" src="/IMAGES/Globe/talkingbubble.png" alt="This is a talkingbubble"/>
     </section>
     </body>
 </html>
