--- a/html/Startside.html
+++ b/html/Startside.html
@@ -27,19 +27,19 @@
     <!--Image center-->
     <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
     <div>
-        <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigTree">
+        <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree">
         <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
         <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
     </div>
 
     <!--Forest-->
     <div>
-        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeBig tree1">
-        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeSmal tree2">
-        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree3">
-        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree treeSmal tree4">
-        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree5">
-        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree treeBig tree6">
+        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree bigTree tree1">
+        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2">
+        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3">
+        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree4">
+        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5">
+        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6">
     </div>
     
 </div>
@@ -54,19 +54,19 @@
     <!--Image center-->
     <div>
         <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
-        <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigTree">
+        <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree">
         <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
         <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
     </div>
 
     <!--Forest-->
     <div>
-        <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeBig tree1">
-        <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree2">
-        <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree3">
-        <img src="/IMAGES/startside/tree1.png" alt="" class="tree treeSmal tree4">
-        <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree5">
-        <img src="/IMAGES/startside/tree2.png" alt="" class="tree treeBig tree6">
+        <img src="/IMAGES/startside/tree1.png" alt="" class="tree bigTree tree1">
+        <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2">
+        <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree3">
+        <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree4">
+        <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5">
+        <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree6">
     </div>
 
 </div>
