--- a/html/Globe.html
+++ b/html/Globe.html
@@ -32,10 +32,16 @@
     
     <!--Spacemen-->
     <section id="spacemen">
-
         <img id="always-has-been-gun" src="/IMAGES/Globe/alwaysHasBeen_gun.png" alt="Always has been"/>
         <img id="always-has-been-victim" src="/IMAGES/Globe/alwaysHasBeen_victim.PNG" alt="Always has been"/>
-        <img id="talkingbubble-1" src="/IMAGES/Globe/talkingbubble.png" alt="This is a talkingbubble"/>
     </section>
+
+    <!--Rocket-->
+    <section id="spaceshuttle">
+
+        <img id="lego-rocket" src="/IMAGES/Globe/lego-rocket.png" alt="Lego Rocket"/>
+
+    </section>
+    
     </body>
 </html>
