--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -28,7 +28,9 @@
             <img id="lightHalo2" src="/images/LEGO-City/48162-rays-efficacy-light-yellow-sun-luminous-halo_800x800.png" alt="">
             <img id="lightHalo3" src="/images/LEGO-City/48162-rays-efficacy-light-yellow-sun-luminous-halo_800x800.png" alt="">
             <img id="lightHalo4" src="/images/LEGO-City/48162-rays-efficacy-light-yellow-sun-luminous-halo_800x800.png" alt="">
+            
 
+            <img id="legoTaxi" src="/images/LEGO-City/lego-taxi.png" alt="A taxi made of lego">
         </section>
     </section> 
 
