--- a/html/Globe.html
+++ b/html/Globe.html
@@ -38,10 +38,15 @@
 
     <!--Rocket-->
     <section id="spaceshuttle">
-
         <img id="lego-rocket" src="/IMAGES/Globe/lego-rocket.png" alt="Lego Rocket"/>
+    </section>
+
+    <!--Extraterrestrial-->
+    <section id="extraterrestrial-section">
+        <img id="lego-ufo" src="/IMAGES/Globe/lego-ufo.png" alt="UFO"/>        
+
 
     </section>
-    
+
     </body>
 </html>
