--- a/html/Globe.html
+++ b/html/Globe.html
@@ -43,8 +43,13 @@
 
     <!--Extraterrestrial-->
     <section id="extraterrestrial-section">
-        <img id="lego-ufo" src="/IMAGES/Globe/lego-ufo.png" alt="UFO"/>        
+        <img id="lego-ufo" src="/IMAGES/Globe/lego-ufo.png" alt="UFO"/> 
+               
+        <!-- Legg til lego alien-->
+            <!--Finn plassering til lego alien og animer-->
 
+        <!-- Legg til lego ku-->
+            <!--Animer lego ku-->
 
     </section>
 
