--- a/html/Globe.html
+++ b/html/Globe.html
@@ -45,8 +45,7 @@
     <section id="extraterrestrial-section">
         <img id="lego-ufo" src="/IMAGES/Globe/lego-ufo.png" alt="UFO"/> 
                
-        <!-- Legg til lego alien-->
-            <!--Finn plassering til lego alien og animer-->
+        <img id="lego-alien" src="/IMAGES/Globe/lego-alien.png" alt="Lego Alien"/>
 
         <!-- Legg til lego ku-->
             <!--Animer lego ku-->
