added spin animation to spacemen

--- a/html/Globe.html
+++ b/html/Globe.html
@@ -32,8 +32,8 @@
     
     <!--Spacemen-->
     <section id="spacemen">
-        <img id="always-has-been-gun" src="/IMAGES/Globe/alwaysHasBeen_gun.png" alt="Always has been"/>
-        <img id="always-has-been-victim" src="/IMAGES/Globe/alwaysHasBeen_victim.PNG" alt="Always has been"/>
+        <img id="spaceman-1" src="/IMAGES/Globe/alwaysHasBeen_gun.png" alt="Always has been" />
+        <img id="spaceman-2" src="/IMAGES/Globe/alwaysHasBeen_victim.PNG" alt="Always has been"/>
     </section>
 
     <!--Rocket-->
