--- a/html/Globe.html
+++ b/html/Globe.html
@@ -34,6 +34,7 @@
     <section id="spacemen">
         <img id="spaceman-1" src="/IMAGES/Globe/alwaysHasBeen_gun.png" alt="Always has been" />
         <img id="spaceman-2" src="/IMAGES/Globe/alwaysHasBeen_victim.PNG" alt="Always has been"/>
+        <img id="its-all-lego" src="/IMAGES/Globe/itsAllLego.jpg" alt="It's all Lego?"/> 
     </section>
 
     <!--Rocket-->
