Fiksa hilsen fra Harald og position på slott og trær

--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -99,6 +99,7 @@
 
         <!-- Castle door -->
         <div class="doorContainer">
+            <img class="merryXmas" src="/images/Lego-Land/merryXmasBubble.png"/>
             <img class="door" src="/images/Lego-Land/door3.png"/>
             <img class="door" id="door2" src="/images/Lego-Land/door3.png"/>
         </div>
@@ -122,11 +123,12 @@
         </div>
 
         <!-- Presents -->
-        <div class="presentShowBtn">
+        <div class="presentShowBtn">Hover 
             <img class="present" id="present1" src="/images/North-Pole/present1.png" alt="present1"/>
             <img class="present" id="present2" src="/images/North-Pole/present2.png" alt="present1"/>
             <img class="present" id="present3" src="/images/North-Pole/present3.png" alt="present1"/>
         </div>
+
     </div>   
 </body>
 </html>
