--- a/html/Startside.html
+++ b/html/Startside.html
@@ -12,64 +12,67 @@
 
 <body>
     <!--Sky-->
-<section>
-    <div class="stars"></div>
-    <div class="shimmer"></div>
-</section>
-
-<div class="normalFrame frame">
-
-    <!--Sky-->
     <section>
-        <div class="moon"  id="relMoon"></div>
+        <div class="stars"></div>
+        <div class="shimmer"></div>
     </section>
 
-    <!--Image center-->
-    <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
-    <div>
-        <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree">
-        <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
-        <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
+    <div class="normalFrame frame">
+
+        <!--Sky-->
+        <section>
+            <div class="moon" id="relMoon"></div>
+        </section>
+
+        <!--Image center-->
+        <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
+        <div>
+            <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree">
+            <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
+            <div class="giftAnimation">
+                <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
+                <img src="/IMAGES/startside/mush.png" alt="" id="mushroom">
+            </div>
+        </div>
+
+        <!--Forest-->
+        <div>
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree bigTree tree1">
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3">
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree4">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6">
+        </div>
+
     </div>
 
-    <!--Forest-->
-    <div>
-        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree bigTree tree1">
-        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2">
-        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3">
-        <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree4">
-        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5">
-        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6">
+    <div class="legoFrame frame">
+
+        <!--Sky-->
+        <div>
+            <img src="/IMAGES/Wallpaper/moon.png" alt="" class="moon">
+        </div>
+
+        <!--Image center-->
+        <div>
+            <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
+            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree">
+            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
+            <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
+        </div>
+
+        <!--Forest-->
+        <div>
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree bigTree tree1">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree3">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree4">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree6">
+        </div>
+
     </div>
-    
-</div>
-
-<div class="legoFrame frame">
-
-    <!--Sky-->
-    <div>
-        <img src="/IMAGES/Wallpaper/moon.png" alt="" class="moon">
-    </div>
-
-    <!--Image center-->
-    <div>
-        <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
-        <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree">
-        <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
-        <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
-    </div>
-
-    <!--Forest-->
-    <div>
-        <img src="/IMAGES/startside/tree1.png" alt="" class="tree bigTree tree1">
-        <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2">
-        <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree3">
-        <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree4">
-        <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5">
-        <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree6">
-    </div>
-
-</div>
 
 
 </body>
