--- a/html/Startside.html
+++ b/html/Startside.html
@@ -31,7 +31,7 @@
             <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
             <div class="giftAnimation">
                 <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
-                <img src="/IMAGES/startside/mush.png" alt="" id="mushroom">
+                <a href="Lego-start.html" id="linkMush"><img src="/IMAGES/startside/mush.png" alt="" id="mushroom"></a>
             </div>
         </div>
 
@@ -47,32 +47,7 @@
 
     </div>
 
-    <div class="legoFrame frame">
 
-        <!--Sky-->
-        <div>
-            <img src="/IMAGES/Wallpaper/moon.png" alt="" class="moon">
-        </div>
-
-        <!--Image center-->
-        <div>
-            <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
-            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree">
-            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
-            <img src="/IMAGES/North-Pole/present1.png" alt="" id="present">
-        </div>
-
-        <!--Forest-->
-        <div>
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree bigTree tree1">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree3">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree4">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree6">
-        </div>
-
-    </div>
 
 
 </body>
