--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,42 @@
     <link rel="stylesheet" href="/CSS/Felles.css">
     <link rel="stylesheet" href="/css/Startside.css">
 </head>
+
 <body>
     <section>
         <div class="stars"></div>
         <div class="shimmer"></div>
     </section>
+
+
+    <div class="normalFrame frame">
+
+        <!--Sky-->
+        <section>
+            <img src="/IMAGES/startside/relmoon.png" alt="" class="relmoon">
+        </section>
+
+        <!--Image center-->
+        <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
+        <div>
+            <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree">
+            <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
+
+        </div>
+
+        <!--Forest-->
+        <div>
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree bigTree tree1">
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3">
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree4">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6">
+        </div>
+    </div>
+
+
+
     <div class="legoFrame frame">
 
         <!--Sky-->
@@ -38,4 +70,5 @@
         </div>
 
 </body>
+
 </html>
