--- a/html/Startside.html
+++ b/html/Startside.html
@@ -21,8 +21,7 @@
 
         <!--Sky-->
         <section>
-            <div class="moon" id="relMoon"></div>
-        </section>
+            <img src="/IMAGES/startside/relmoon.png" alt="" class="moon">        </section>
 
         <!--Image center-->
         <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
