--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -16,20 +16,18 @@
         <div class="shimmer"></div>
     </section>
 
-
+    <img src="/IMAGES/North-Pole/sleigh.png" alt="" id="santaSleigh">
     <div class="normalFrame frame">
 
         <!--Sky-->
         <section>
-            <img src="/IMAGES/startside/relmoon.png" alt="" class="relmoon">
-        </section>
+            <img src="/IMAGES/startside/relmoon.png" alt="" class="moon">        </section>
 
         <!--Image center-->
-        <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
         <div>
+            <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
             <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree">
             <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
-
         </div>
 
         <!--Forest-->
@@ -41,6 +39,7 @@
             <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5">
             <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6">
         </div>
+
     </div>
 
 
@@ -53,8 +52,8 @@
         </div>
 
         <!--Image center-->
+        <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
         <div>
-            <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
             <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree">
             <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
         </div>
