--- a/html/Startside.html
+++ b/html/Startside.html
@@ -16,7 +16,7 @@
         <div class="stars"></div>
         <div class="shimmer"></div>
     </section>
-
+    <img src="/IMAGES/North-Pole/sleigh.png" alt="">
     <div class="normalFrame frame">
 
         <!--Sky-->
@@ -24,8 +24,8 @@
             <img src="/IMAGES/startside/relmoon.png" alt="" class="moon">        </section>
 
         <!--Image center-->
-        <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
         <div>
+            <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
             <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree">
             <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
             <div class="giftAnimation">
