--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -17,6 +17,7 @@
     </section>
 
     <img src="/IMAGES/North-Pole/sleigh.png" alt="" id="santaSleigh">
+    <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="" id="sleigh"></a>
     <div class="normalFrame frame">
 
         <!--Sky-->
