--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -17,18 +17,20 @@
     </section>
 
     <img src="/IMAGES/North-Pole/sleigh.png" alt="" id="santaSleigh">
+
     <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="" id="sleigh"></a>
     <div class="normalFrame frame">
 
         <!--Sky-->
         <section>
-            <img src="/IMAGES/startside/relmoon.png" alt="" class="moon">        </section>
+            <img src="/IMAGES/startside/relmoon.png" alt="" class="moon" id="relMoon">
+        </section>
 
         <!--Image center-->
         <div>
-            <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground">
+            <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground" id="relGround">
             <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree">
-            <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road">
+            <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road" id="relRoad">
         </div>
 
         <!--Forest-->
@@ -49,14 +51,14 @@
 
         <!--Sky-->
         <div>
-            <img src="/IMAGES/Wallpaper/moon.png" alt="" class="moon">
+            <img src="/IMAGES/Wallpaper/moon.png" alt="" class="moon" id="legoMoon">
         </div>
 
         <!--Image center-->
-        <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground">
+        <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground" id="legoGround">
         <div>
             <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree">
-            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road">
+            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road" id="legoRoad">
         </div>
 
         <!--Forest-->
