--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -29,18 +29,18 @@
         <!--Image center-->
         <div>
             <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground" id="relGround">
-            <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree">
+            <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree" id="relBigCenterTree">
             <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road" id="relRoad">
         </div>
 
         <!--Forest-->
         <div>
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree bigTree tree1">
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3">
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree4">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6">
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree bigTree tree1" id="relTree1">
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2" id="relTree2">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3" id="relTree3">    
+            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree4" id="relTree4">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5" id="relTree5">
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6" id="relTree6">
         </div>
 
     </div>
@@ -57,18 +57,18 @@
         <!--Image center-->
         <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground" id="legoGround">
         <div>
-            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree">
+            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree" id="legoBigCenterTree">
             <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road" id="legoRoad">
         </div>
 
         <!--Forest-->
         <div>
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree bigTree tree1">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree3">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree4">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree6">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree bigTree tree1" id="legoTree1">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2" id="legoTree2">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree3" id="legoTree3">
+            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree4" id="legoTree4">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5" id="legoTree5">
+            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree6" id="legoTree6">
         </div>
 
 </body>
