--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -41,16 +41,25 @@
 
             </div>
 
+            <!--Signpost-->
+            <img id="signpostToTheWorld" src="/IMAGES/Felles/signpost2.png" alt="The Signpost"/>
+            <div id="snowTop"> </div>
+
+            <!--House and Helpers-->
             <img id="house2" src="/images/North-Pole/house2.png" alt="house">
             <img id="giftbag" src="/images/North-Pole/giftBag.png" alt="giftbag">
             <img id="helper1" src="/images/North-Pole/helper1.png" alt="santa helper">
             <img id="helper2" src="/images/North-Pole/helper2.png" alt="santa helper">
             <img id="helper3" src="/images/North-Pole/helper3.png" alt="santa helper">
             <img id="cottage" src="/images/North-Pole/TheCottage.png" alt="cottage">
+             
+            <!--Clouds-->
             <img class= "cloud" id="cloud1" src="/images/Lego-Land/cloud1.png" alt="cloud">
             <img class= "cloud" id="cloud2" src="/images/Lego-Land/cloud1.png" alt="cloud">
             <img class= "cloud" id="cloud3" src="/images/Lego-Land/cloud1.png" alt="cloud">
             <img class= "cloud" id="cloud4" src="/images/Lego-Land/cloud1.png" alt="cloud">
+            
+            <!--Snowflakes-->
             <img id="flake1"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
             <img id="flake2"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
             <img id="flake3"class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
