--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -16,21 +16,24 @@
         </section>
         
         <section id="city">
-            <img id="road" src="/images/LEGO-City/imageedit_9_2933579043.png" alt="">
-            <img id="house1" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
-            <img id="house2" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
-            <img id="house3" src="/images/LEGO-City/imageedit_60_7582352620.png" alt="">
-            <img id="house4" src="/images/LEGO-City/imageedit_40_4503824563.png" alt="">
-            <img id="balconyWoman" src="/images/LEGO-City/imageedit_34_9925936600.png" alt="">
+            <img id="road" src="../images/LEGO-City/legoRoad.png" alt="A lego road.">
+            <img id="house1" src="../images/LEGO-City/legoApartement.png" alt="A lego apartement block.">
+            <img id="house2" src="../images/LEGO-City/legoApartement.png" alt="A lego apartement block.">
+            <img id="house3" src="../images/LEGO-City/legoApartement.png" alt="A lego apartement block.">
+            <img id="house4" src="../images/LEGO-City/legoApartement2.png" alt="A big lego apartement block.">
+            <img id="balconyWoman" src="../images/LEGO-City/legoWoman.png" alt="A woman on a balcony.">
 
 
-            <img id="lightHalo1" src="/images/LEGO-City/48162-rays-efficacy-light-yellow-sun-luminous-halo_800x800.png" alt="">
-            <img id="lightHalo2" src="/images/LEGO-City/48162-rays-efficacy-light-yellow-sun-luminous-halo_800x800.png" alt="">
-            <img id="lightHalo3" src="/images/LEGO-City/48162-rays-efficacy-light-yellow-sun-luminous-halo_800x800.png" alt="">
-            <img id="lightHalo4" src="/images/LEGO-City/48162-rays-efficacy-light-yellow-sun-luminous-halo_800x800.png" alt="">
+            <img id="lightHalo1" src="../images/LEGO-City/light.png" alt="Light that flickers.">
+            <img id="lightHalo2" src="../images/LEGO-City/light.png" alt="Light that flickers.">
+            <img id="lightHalo3" src="../images/LEGO-City/light.png" alt="Light that flickers.">
+            <img id="lightHalo4" src="../images/LEGO-City/light.png" alt="Light that flickers.">
             
 
-            <img id="legoTaxi" src="/images/LEGO-City/lego-taxi.png" alt="A taxi made of lego">
+            <a href="Lego-Land.html"><img id="legoTaxi" src="/images/LEGO-City/legoTaxi.png" alt="A taxi made of lego"></a>
+
+            <img id="legoManArmless" src="../images/LEGO-City/ben-bui-lego-man1.png" alt="lego man armless">
+            <img id="legoArm" src="../images/LEGO-City/imageedit_6_6455094802.png" alt="lego arm">
         </section>
     </section> 
 
