--- a/html/Globe.html
+++ b/html/Globe.html
@@ -51,7 +51,7 @@
                 
             <img id="legoAlien" src="/IMAGES/Globe/lego-alien.png" alt="Lego Alien"/>
 
-            <!-- Legg til lego ku-->
+            <img id="spaceCow" src="/IMAGES/Globe/lego-cow.png" alt="Lego Cow">
                 <!--Animer lego ku-->
 
         </section>
