--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LEGO-City</title>
+    <title>LEGO City</title>
     <link rel="stylesheet" href="/css/LEGO-City.css">
     <link rel="stylesheet" href="/CSS/Felles.css">
 </head>
@@ -30,8 +30,9 @@
             <img id="lightHalo4" src="../images/LEGO-City/light.png" alt="Light that flickers.">
             
 
-            <a href="Lego-Land.html"><img id="legoTaxi" src="/images/LEGO-City/legoTaxi.png" alt="A taxi made of lego"></a>
-
+            <a href="Lego-Land.html"><img id="legoTaxi" src="../images/LEGO-City/legoTaxi.png" alt="A taxi made of lego"></a>
+            
+            <img id="legoMan" src="../images/LEGO-City/ben-bui-lego-man2.png" alt="Lego man side profile">
             <img id="legoManArmless" src="../images/LEGO-City/ben-bui-lego-man1.png" alt="lego man armless">
             <img id="legoArm" src="../images/LEGO-City/imageedit_6_6455094802.png" alt="lego arm">
         </section>
