--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -11,12 +11,17 @@
     <body>
 
 
-        <div id = "container">
-            <!--<section> 
-                <div class="stars"></div> 
-                <div class ="shimmer"></div>
-                <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>   
-            </section>-->
+    <div id = "container">
+        <!--<section> 
+            <div class="stars"></div> 
+            <div class ="shimmer"></div>
+            <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>   
+        </section>-->
+        <img id="clouds" src="/images/cloudBackground.png" alt="clouds">
+        <img id="snowBackground" src="/images/North-Pole/snowBG.png" alt = "snow landscape">
+        <img id="sleigh" src ="/images/North-Pole/sleigh.png" alt="sleigh">
+        <div id = "assemblyLineContainer">
+            <img id="assemblyLine" src="/images/North-Pole/assemblyLine.png" alt ="assembly line">
             
             <img id="snowBackground" src="/images/North-Pole/snowBG.png" alt = "snow landscape">
             <img id="sleigh" src ="/images/North-Pole/sleigh.png" alt="sleigh">
