--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -30,7 +30,7 @@
             <img id="lightHalo4" src="../images/LEGO-City/light.png" alt="Light that flickers.">
             
 
-            <a href="Lego-Land.html"><img id="legoTaxi" src="../images/LEGO-City/legoTaxi.png" alt="A taxi made of lego"></a>
+            <a class="legoTaxi" href="../HTML/Lego-Land.html"><img class="legoTaxi" src="../images/LEGO-City/legoTaxi.png" alt="Taxi"></a>
             
             <img id="legoMan" src="../images/LEGO-City/ben-bui-lego-man2.png" alt="Lego man side profile">
             <img id="legoManArmless" src="../images/LEGO-City/ben-bui-lego-man1.png" alt="lego man armless">
