--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -35,6 +35,12 @@
             <img id="legoMan" src="../images/LEGO-City/ben-bui-lego-man2.png" alt="Lego man side profile">
             <img id="legoManArmless" src="../images/LEGO-City/ben-bui-lego-man1.png" alt="lego man armless">
             <img id="legoArm" src="../images/LEGO-City/imageedit_6_6455094802.png" alt="lego arm">
+
+            
+        </section>
+
+        <section>
+            
         </section>
     </section> 
 
