--- a/html/LEGO-City.html
+++ b/html/LEGO-City.html
@@ -36,12 +36,14 @@
             <img id="legoManArmless" src="../images/LEGO-City/ben-bui-lego-man1.png" alt="lego man armless">
             <img id="legoArm" src="../images/LEGO-City/imageedit_6_6455094802.png" alt="lego arm">
 
+            <img id="sleigh" src="../images/North-Pole/sleigh.png" alt="Santa's sleigh">
+            <img id="present" src="../images/North-Pole/present1.png" alt="Present">
+
             
         </section>
 
-        <section>
-            
-        </section>
+
+
     </section> 
 
     </body>
