--- a/html/Globe.html
+++ b/html/Globe.html
@@ -51,9 +51,9 @@
                 
             <img id="legoAlien" src="/IMAGES/Globe/lego-alien.png" alt="Lego Alien"/>
 
-            <img id="spaceCow" src="/IMAGES/Globe/lego-cow.png" alt="Lego Cow">
-                <!--Animer lego ku-->
-
+            <!--Space Cow-->
+            <img id="spaceCow" src="/IMAGES/Globe/lego-cow.png" alt="Lego Cow"/>
+            <img id="mushroomCloud" src="/IMAGES/Globe/lego-mushroomcloud.png" alt="Mushroom Cloud">
         </section>
 
         </body>
