--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-
+        
 
         <div id = "container">
             <!--<section> 
@@ -18,8 +18,9 @@
                 <div class ="shimmer"></div>
                 <div class="moon"><img src="/IMAGES/Wallpaper/moon.png" alt=""></div>   
             </section>-->
-            
-            <img id="snowBackground" src="/images/North-Pole/snowBG.png" alt = "snow landscape">
+            <img id="cloudBackground" src="/images/North-Pole/skyBackground.png" alt="clouds">
+            <div id="darkDiv"></div>
+            <img id="snowBackground" src="/images/North-Pole/snowBackground.png" alt = "snow landscape">
             <img id="sleigh" src ="/images/North-Pole/sleigh.png" alt="sleigh">
             <div id = "assemblyLineContainer">
                 <img id="assemblyLine" src="/images/North-Pole/assemblyLine.png" alt ="assembly line">
