--- a/html/North-Pole.html
+++ b/html/North-Pole.html
@@ -47,6 +47,9 @@
             <img id="signpostToTheWorld" src="/IMAGES/Felles/signpost2.png" alt="The Signpost"/>
             <p></p>
             <div id="snowTop"> </div>
+            
+            <a href="Globe.html" id="spaceLink" class="links">space</a>
+            <a href="LEGO-City.html" id="legoCityLink" class="links">Lego City</a>
 
             <!--House and Helpers-->
             <img id="house2" src="/images/North-Pole/house2.png" alt="house">
